Complete path spec parser, add basic path find functionality
Path specs are parsed into list of specifiers
as key identifiers or index identifiers. A find_fragment
function joins a json fragment and a path specifier
and returns the sub json fragment which the path
specifies. Also adds more thorough to_string methods.

--- a/src/dune
+++ b/src/dune
@@ -1,5 +1,5 @@
 (executable
  (name main)
- (libraries json_parse)
+ (libraries json_parse path_spec_parse)
  (lint
   (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))
