Refactor code, standardize naming
Adds a shell script to easily invoke the tool:
`./jsn file.json ".Users[1]"`

--- a/src/pathSpecParse/dune
+++ b/src/pathSpecParse/dune
@@ -1,6 +1,6 @@
 (library
- (name path_spec_parse)
- (public_name path_spec_parse))
+ (name pathSpecParse)
+ (public_name pathSpecParse))
 
 (ocamllex pathSpecLexer)
 
